# DFVS

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  dfvs_heuristic.tgz  example.html  main.cpp  main_exact.cpp  main_heuristic.cpp
include/: bitvector.hpp  bitvector_old.hpp  bounds.hpp  dense_graph.hpp  graph.hpp  local_search.hpp  local_search_edgew.hpp  local_search_old.hpp  reduction_engine.hpp  reductions.hpp  solver.hpp  sparse_graph.hpp  sparse_local_search.hpp  sparse_reductions.hpp
scripts/: plot_data  test.sh  test_heuristic.sh  visualize.py
src/: bitvector.cpp  bounds.cpp  dense_graph.cpp  graph.cpp  local_search.cpp  local_search_edgew.cpp  reduction_engine.cpp  reductions.cpp  reductions_old.cpp  solver.cpp  sparse_graph.cpp  sparse_local_search.cpp  sparse_reductions.cpp
